add copy test 5, 6, 7